--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,17 @@
 {
-    "name": "Facebook privacy watcher.",
-    "version" : "1.0",
-    "description": "Facebook privacy watcher.",
-    "version": "1.0",
+    "name": "Facebook privacy watcher and analyser.",
+    "short_name": "FPWA.",
+    "description": "Facebook privacy watcher and analyser.",
+    "version": "1.1",
 
     "browser_action": {
-        "default_icon": "icon.png",
+        "default_icon": "icon16.png",
         "default_popup": "popup.html"
+    },
+    "icons": {
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
     },
     "background": {
         "scripts": [
