--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,9 @@
     "name": "Facebook privacy watcher and analyser.",
     "short_name": "FPWA.",
     "description": "Facebook privacy watcher and analyser.",
-    "version": "1.1.1",
     "name": "Facebook Privacy Watcher & Analyzer",
-    "version" : "1.0",
-    "description": "FPWA (Facebook Privacy Watcher and Analyzer) is a Chrome plug-in to help Facebookers manage their privacy and understang their behavior.",
-    "version": "1.0",
+    "description": "FPWA(Facebook Privacy Watcher and Analyzer)is a Chrome plug-in to help Facebookers manage their privacy & understang their behavior.",
+    "version": "2.0",
 
     "browser_action": {
         "default_icon": "icon16.png",
